Add admin reset-database endpoint to Swagger documentation
